# philos

./: Cargo.toml  README.md
.cargo/: config.toml
src/: acpi.rs  allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  qemu.rs  serial.rs  tests.rs  vga_buffer.rs
src/acpi/: aml.rs  fadt.rs
src/allocator/: bump.rs  fixed.rs  free_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
