[package]
name = "philos"
version = "0.1.0"
authors = ["Philippe Laflamme <philippe.laflamme@gmail.com>"]
edition = "2018"

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"

[dependencies]
bootloader = "0.9"
spin = "0.7"
x86_64 = "0.13"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

# https://os.phil-opp.com/testing/#exiting-qemu
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33 # (0x10 << 1) | 1
