[package]
name = "philos"
version = "0.1.0"
authors = ["Philippe Laflamme <philippe.laflamme@gmail.com>"]
edition = "2018"

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"

[dependencies]
acpi = "2.2"
bootloader = { version = "0.9" , features = ["map_physical_memory"] }
conquer-once = { version = "0.3", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
linked_list_allocator = "0.8"
pc-keyboard = "0.5"
pic8259_simple = "0.2.0"
rsdp = "1.1"
spin = "0.7"
uart_16550 = "0.2"
volatile = "0.4"
x86_64 = "0.13"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

# https://os.phil-opp.com/testing/#exiting-qemu
[package.metadata.bootimage]
run-args = [
    "-serial", "stdio",
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false
